manifests/mattermost/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mattermost
  namespace: mattermost-k3d
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mattermost
  template:
    metadata:
      labels:
        app: mattermost
    spec:
      containers:
        - name: mattermost
          image: ghcr.io/jannegpriv/mattermost-arm64:11.1.0
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: mattermost-data
              mountPath: /mattermost/data
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - containerPort: 8065
          readinessProbe:
            httpGet:
              path: /api/v4/system/ping
              port: 8065
            initialDelaySeconds: 30
          livenessProbe:
            httpGet:
              path: /api/v4/system/ping
              port: 8065
            initialDelaySeconds: 60
            periodSeconds: 30
      volumes:
        - name: mattermost-data
          persistentVolumeClaim:
            claimName: mattermost-data
