manifests/mattermost/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mattermost
  namespace: mattermost-k3d
spec:
  ingressClassName: traefik
  rules:
    - host: mattermost.127.0.0.1.nip.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mattermost
                port:
                  number: 8065
